<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white">

        <LinearLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="128.0dip"
                android:layout_height="128.0dip"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_vertical"
                android:background="@mipmap/ic_rr_launcher" />

            <TextView
                style="@style/about_item_style"
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:text="@string/text_version" />

            <TextView
                style="@style/about_item_style"
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:text="@string/text_copyright" />

            <TextView
                android:id="@+id/text_view_license"
                style="@style/about_item_style"
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:text="@string/text_open_source_licenses" />

            <TextView
                android:id="@+id/text_view_thanks"
                style="@style/about_item_style"
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:text="@string/text_thanks" />

        </LinearLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>